--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -1,20 +1,34 @@
 .logo {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
+    .logo h1 {
+        font-size: 4.8vw;
+        background: linear-gradient(to top, #398d43, #7fc377);
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+
+        @media (max-width: 720px) {
+            .logo h1 {
+                font-size: 2rem;
+            }
+        }
+
+    .logo img {
+        width: clamp(200px, 30%, 500px);
+        height: 20%;
+    }
     
-.logo img {
-    width: 30%;
-}
 .input_container {
     display: flex;
     align-items: center;
     justify-content: center;
 
-    width: 75vw;
-    max-width: 560px;
+    width: clamp(100px, 75vw, 560px);
     height: 30px;
     margin: 0 auto;
     margin-top: 30px;
